# clavm

./: .gitignore  .gitmodules  .lvimrc  CLAVMAPI.cpp  CLAVMAPI.h  CMakeLists.txt  Client.hpp  Compiler.hpp  Configuration.h  Help.h  HotSwap.cpp  HotSwap.hpp  Makefile  Makefile.pi  NOTES.md  Process.h  ProcessMacOS.cpp  ProcessWindows.cpp  README  README.md  Semaphore.h  SemaphoreMacOS.cpp  Server.h  Server.hpp  Shared.hpp  SharedMemory.h  SharedMemoryData.hpp  SharedMemoryMacOS.cpp  TCC.cpp  Utilities.cpp  Utilities.hpp  build-tinycc  cavm-submit.cpp  cavm.cpp  clavm-broker.cpp  clavm-listener.cpp  clavm-submit.cpp  clavm-visual.cpp  clavm-wav.cpp  clavm.cpp  (+10 more)
attempt/clavm/: HotSwap.cpp  Makefile  TCC.cpp  Utilities.cpp  clavm-broker.cpp  clavm-wav.cpp  clavm.cpp  globals.h  test.cpp
attempt/persamplec/: .gitignore  HostInterface.h  README.md  outline.md
attempt/persamplec/adc/: README.md  a.c  a6.c  additive.c  blah.c  bytebeat-radio.c  compare-tone-with-sine.c  crash.c  dahc.c  detect-changes.c  dust2.c  dust3.c  find-edge3.c  frac.c  frac2.c  frac3.c  math.h  multi-osc.c  my-old-phone-number.c  phasor-basic.c  quasi-ms20-tempo.c  rad-failure-mode.c  reverb-pitch-warp.c  reverb.c  reverb3.c  reverb4.c  reverb6.c  saw-aliasing.c  show-frequency-modulation.c  show-phase-distortion.c  simple-harmonic.c  simple.c  sine.c  sine2.c  source.vim  synth.h  test.c  tick.c  timeline.c  timer-random.c  (+5 more)
attempt/persamplec/client/: Makefile.linux  Makefile.macos  per-sample-c-client.cpp
attempt/persamplec/play/: .lvimrc  README.md  a1.c  a4.c  a5.c  abram1.c  abram2.c  abram3.c  biquad.c  clocks.c  droid.c  dust2.c  example.c  fixing-sine-noise.c  hello.c  helo.c  multiwave.c  phase-distortion.c  quasi-ms20-tempo.c  reverb5.c  simple-harmonic.c  stdarg.h  synth-user-memory.h  synth.h  try.c  use-host-memory-synth-2.c  use-host-memory-synth.c  use-host-memory.c  use-tone.c  viznut.c
attempt/persamplec/server/: Makefile.linux  Makefile.macos  compiler.cpp  compiler.h  per-sample-c-server.cpp
attempt/persamplec/visual/: per-sample-c-visual.cpp
c/old/: a2.c  a3.c  a7.c  abram.c  abram4.c  blah-seq.c  clicks.c  crash-floating-point-exception.c  crash-out-of-bounds-array-access.c  crash.c  dust.c  dust3.c  empty.c  find-edge.c  find-edge2.c  foo.c  foo.vim  functions.h  int-frac.c  kick.c  line.c  malloc.c  math-h-notes.txt  more-memory.c  one.c  phasor.c  reverb2.c  reverb4.c  sequencing.c  simple2.c  simple3.c  sine.c  sine2.c  step1.c  synth.h  tcc-randmax.c  test-neat-fail.c  test.c  timer-random.c  use-host-memory-synth-3.c  (+3 more)
c/play/: 240c.c  bar.c  check-state-sharing.c  delta-sigma.c  dust-1.c  dust-2.c  idea-3.c  idea-4.c  idea.c  nothing.c  pg17192.txt  pifcamp.c  practice-pifcamp-2.c  practice-pifcamp.c  practice.c  pulse.c  silence.c  stereo-2.c  stereo-3.c  stereo.c  synth.h  teensy-test.c  test-midi.c  use-svf.c  use-synth.c  video.c
cmake/: .lvimrc  CMakeLists.txt  Help.h  NOTES.md  SemaphoreWindows.cpp  SharedMemoryMacOS.cpp  clavm.cpp  clavm.lua  clavm.vim  nvim  submit.cpp  tcc.cpp
play/: another.c  foo.c  idea-2.c  idea-3.c  idea.c  pifcamp.c  stereo-beats.c  stereo.c
scratch/: collect-lines.vim  count-text-change.vim  strlen.c  test-gate.c  test-memory.c
scripts/: MIDI-CC.maxpat  start  start-clavm  start-clavm-broker
server-abstraction/: Client.h  ClientSharedMemoryMacOS.cpp  Makefile  NOTES  Server.h  ServerSharedMemoryMacOS.cpp  Utilities.h  client.cpp  server.cpp
visual/: flags.cmake
