cmake_minimum_required(VERSION 3.27)
project(CLAVM)
add_executable(clavm clavm.cpp)
add_executable(tcc tcc.cpp)
add_executable(submit-cli submit.cpp)
add_library(submit SHARED submit.cpp)
set_property(TARGET clavm PROPERTY CXX_STANDARD 17)
set_property(TARGET tcc PROPERTY CXX_STANDARD 17)
set_property(TARGET submit PROPERTY CXX_STANDARD 17)
#set_property(TARGET submit PROPERTY POSITION_INDEPENDENT_CODE ON)
